fixed modal jump thing with fixed donate buttons

--- a/css/sass/styles.scss
+++ b/css/sass/styles.scss
@@ -1186,8 +1186,6 @@ main {
   }
 }
 
-modal-open{overflow:auto;padding-right:0 !important;}
-
 .modal-backdrop.show {
   background: #000;
   opacity: .63;
